@@ -1108,17 +1108,20 @@ int *spell_no;
 	 * in the window-ports (say via a tab character).
 	 */
 	if (!iflags.menu_tab_sep)
-		Sprintf(buf, "%-20s     Level  %-12s Fail", "    Name", "Category");
+		Sprintf(buf, "%-20s     Level  %-12s Fail  Memory",
+			"    Name", "Category");
 	else
 		Sprintf(buf, "Name\tLevel\tCategory\tFail");
 	add_menu(tmpwin, NO_GLYPH, MENU_DEFCNT, &any, 0, 0, ATR_BOLD, buf, MENU_UNSELECTED);
 	for (i = 0; i < MAXSPELL && spellid(i) != NO_SPELL; i++) {
 		Sprintf(buf, iflags.menu_tab_sep ?
-			"%s\t%-d%s\t%s\t%-d%%" : "%-20s  %2d%s   %-12s %3d%%",
+			"%s\t%-d%s\t%s\t%-d%%" : "%-20s  %2d%s   %-12s %3d%%"
+			"   %3d%%",
 			spellname(i), spellev(i),
 			(spellknow(i) > 1000) ? " " : (spellknow(i) ? "!" : "*"),
 			spelltypemnemonic(spell_skilltype(spellid(i))),
-			100 - percent_success(i));
+			100 - percent_success(i),
+			(spellknow(i) * 100 + (KEEN-1)) / KEEN);
 
 		any.a_int = i+1;	/* must be non-zero */
 		add_menu(tmpwin, NO_GLYPH, MENU_DEFCNT, &any,
@@ -1166,22 +1169,24 @@ dump_spells()
 	}
 	dump_title("Spells known in the end");
 
-	Sprintf(buf, "%-20s   Level    %-12s Fail", "    Name", "Category");
+	Sprintf(buf, "%-20s   Level    %-12s Fail  Memory", "    Name", "Category");
 	dump_text("  %s\n",buf);
 	dump_html("<table class=\"nh_spells\">\n", "");
-	dump_html("<tr><th>Name</th><th>Level</th><th>Category</th><th>Fail</th></tr>\n", "");
+	dump_html("<tr><th>Name</th><th>Level</th><th>Category</th><th>Fail</th><th>Memory</th></tr>\n", "");
 	for (i = 0; i < MAXSPELL && spellid(i) != NO_SPELL; i++) {
-		Sprintf(buf, "%c - %-20s  %2d%s   %-12s %3d%%",
+		Sprintf(buf, "%c - %-20s  %2d%s   %-12s %3d%%" "   %3d%%",
 			spellet(i), spellname(i), spellev(i),
 			(spellknow(i) > 1000) ? " " : (spellknow(i) ? "!" : "*"),
 			spelltypemnemonic(spell_skilltype(spellid(i))),
-			100 - percent_success(i));
+			100 - percent_success(i),
+			(spellknow(i) * 100 + (KEEN-1)) / KEEN);
 		dump_text("  %s\n", buf);
-		Sprintf(buf, "<tr><td>%s</td><td align=\"right\">%d%s</td><td>%s</td><td align=\"right\">%d%%</td></tr>\n",
+		Sprintf(buf, "<tr><td>%s</td><td align=\"right\">%d%s</td><td>%s</td><td align=\"right\">%d%%</td><td align=\"center\">%d%%</td></tr>\n",
 			spellname(i), spellev(i),
 			(spellknow(i) > 1000) ? "&nbsp;" : (spellknow(i) ? "!" : "*"),
 			spelltypemnemonic(spell_skilltype(spellid(i))),
-			100 - percent_success(i));
+			100 - percent_success(i),
+			(spellknow(i) * 100 + (KEEN-1)) / KEEN);
 		dump_html(buf,"");
 	}
 	dump_html("</table>\n", "");
